syntax = "proto3";

option csharp_namespace = "Artemis.Service.Protos.Business.VisionScreen";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "common.proto";

package Artemis.Service.Protos.Business.VisionScreen;

// 筛查服务
service VisionScreen{
}