syntax = "proto3";

option csharp_namespace = "Artemis.Service.Protos.Business.VisionScreen";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "common.proto";

package Artemis.Service.Protos.Business.VisionScreen;

// 通知消息数据包
message NotificationPacket{
	// 通知消息标识
	// @required
	// @guid
	string MessageId = 1;
	// 通知消息类型
	// @required
	// @maxLength(32)
	string MessageType = 2;
	// 通知消息标题
	// @required
	// @maxLength(128)
	string Title = 3;
	// 通知消息内容
	// @required
	string Content = 4;
	// 通知消息时间
	// @datetime
	google.protobuf.Timestamp DateTime = 5;
	// 记录标识
	// @required
	// @guid
	string RecordId = 6;
	// 是否已读
	// @required
	bool IsRead = 7;
}